#2122: Fix - MS search bar is shifted when plugin panel is visible (#2124)

--- a/geonode_mapstore_client/client/themes/geonode/less/_resources-catalog.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_resources-catalog.less
@@ -19,7 +19,7 @@
     top: 0;
     right: 0;
     z-index: 2000;
-    width: 550px;
+    width: 420px;
     height: 100%;
     display: flex;
     flex-direction: column;
